# memer

./: .env.example  .gitignore  README.md  pyproject.toml
memerBackend/: manage.py
memerBackend/memerBackend/: asgi.py  settings.py  urls.py  wsgi.py
memerBackend/templateStore/: apps.py  models.py
memerBackend/templateStore/migrations/: 0001_initial.py  0002_alter_memetemplate_image.py
memerBackend/users/: admin.py  models.py  serializers.py  urls.py  views.py
memerBackend/users/migrations/: 0001_initial.py
